Add Network_Gephi folder to .gitignore
Added Data/Network_Gephi/ to .gitignore to exclude Gephi network files from version control.

- Removed red_positiva.gexf from git tracking
- File remains locally but won't be pushed to GitHub
- Network data files can be large and may contain network structure info

--- a/.gitignore
+++ b/.gitignore
@@ -66,6 +66,9 @@ Data/0_Raw/*.xlsx
 Data/0_Raw/*.csv
 !Data/0_Raw/.gitkeep
 
+# Network data from Gephi
+Data/Network_Gephi/
+
 # Keep processed/anonymized data but optionally exclude if sensitive
 # Data/1_Preprocess/*.csv
 # Data/1_Preprocess/*.xlsx
